<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Startup Legal Connect</string>
    <string name="about_us_intro">Start-up Legal Connect is a platform intending to bring about an
        awareness in the Start-up Community regarding their cyber-legal aspects.</string>
    <string name="intro_doubts">We enable you to get all your doubts regarding
        legal aspects of start-ups clarified through our legal mentors.</string>
    <string name="intro_intellectual_protection">We also focus on the legal aspects of a start-up
        right from protecting your idea till execution of your idea and getting an investor on board.</string>
    <string name="intro_common_mistakes">We also help start-ups identify the common mistakes which they
        are not aware of yet have legal implications.</string>
    <string name="who_are_we">Who are we?</string>
    <string name="where_we_fit">Where we fit in?</string>
    <string name="common_legel_mistakes">Common legal mistakes</string>
    <string name="steps_for_startups">Steps for start-ups</string>
    <string name="cyberlaw_essentials">Cyber law essentials</string>
    <string name="legal_mentor">Legal Mentor</string>
    <string name="ask_us">Ask us</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Where we fit in strings -->
    <string name="commerce">E &amp; M Commerce</string>
    <string name="market_places">Online market places</string>
    <string name="health_care">Health Care</string>
    <string name="auction_portal">Online auction portal</string>
    <string name="websites">Websites</string>
    <string name="mobile_apps">Mobile apps</string>
    <string name="cloud_based">Cloud based platforms &amp; products</string>
    <string name="iot">Internet of Things based products</string>
    <string name="websites_mobile">Software development</string>
    <string name="food_tech">Food technology</string>
    <string name="fin_tech">Financial technology (Fintech)</string>
    <string name="agri_tech">Agriculture technology (Agritech)</string>
    <string name="on_demand">On demand solutions &amp; platforms</string>
    <string name="big_data">Big data analytics</string>
    <string name="online_travel">Online travel portals</string>
    <string name="online_wallets">Online &amp; M-Wallets</string>
    <string name="blog">Blog &amp; blogging platform</string>
    <string name="fashion">Fashion</string>

    <!-- Common Legal Mistakes strings -->

    <string name="pls_make_sure">Make sure to avoid these common legal mistakes made by start-ups!</string>
    <string name="logo_protection">Lack of proper legal protection for the company\'s logo.</string>
    <string name="poor_branding">Choosing a poor brand name can lead to trademark issues.</string>
    <string name="ip_issues">Open-sourcing can lead to IP related conflicts.</string>
    <string name="copyright_mistake">Using copyright symbol without applying or proper registration is illegal.</string>
    <string name="hyperlinking_mistake">Adding links to images, videos, youtube content without permissions is a common mistake.</string>
    <string name="no_legal_doc">It is always beneficial to maintain proper legal documentation.</string>
    <string name="cut_and_paste">Do not cut, copy and paste legal agreements from the internet.</string>
    <string name="diy_mistake">Do not take a DO-IT-YOURSELF approach to legal documents.</string>

    <!-- Ask Us String -->
    <string name="strSendQuestions">Send us your questions</string>
    <string name="strName">Name (required)</string>
    <string name="strEmail">Email ID (required)</string>
    <string name="strQuestions">Query (required)</string>
    <string name="strSend">Send</string>

    <!-- Cyber law essentials strings -->
    <string name="strCyberLawCompliance">Please make sure your start-up is cyber-law compliant</string>
    <string name="strPrivacyPolicy"><b>Privacy policy</b> - as per cyber law rules and regulations</string>
    <string name="strTOU"><b>Terms of use</b> - as per cyber law rules and regulations</string>
    <string name="strGrievanceMechanism"><b>Grievance mechanism</b> - as per cyber law rules and regulations</string>
    <string name="strComplianceAgreement">Cyber law compliance agreement</string>
    <string name="strLegalDisclaimer">Legal disclaimer</string>

    <!-- Legal Mentor -->
    <string name="para1">Mr. Sai Sushanth is a cyber law expert and a techno legal consultant. He is a start-up legal mentor to many start-up incubators across the country.
    He has been advising many start-ups on different legal aspects. His niche areas of expertise include cyber law, intellectual property law and legal aspects of start-ups,
        e-commerce, cloud computing, big data analytics, m-commerce, online business, IOT.</string>

    <string name="para2">He has spoken in various start-up events and conferences and has come up with an initiative of "Cyber laws for start-ups". He has authored an e-book titled
    "Websites and Indian Cyber law", currently available on Amazon and an android mobile app named "Cyber law 4 u" promoting cyber law awareness.</string>

    <string name="para3">He is one among the 45 cyber law auditors in India. He is regularly interviewed by media as a cyber law expert and has addressed various cyber legal
    issues including social media and law, e-commerce and legal aspects, cyber crimes &amp; law.</string>

</resources>