<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.thestartup.startuplegalconnect.fragments.LegalMentorFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">
            <com.mikhaellopez.circularimageview.CircularImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                app:civ_border_color="#EEEEEE"
                app:civ_border_width="4dp"
                app:civ_shadow="true"
                app:civ_shadow_radius="10"
                app:civ_shadow_color="#8BC34A"
                android:layout_gravity="center_horizontal"
                android:id="@+id/mentorImageView"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/para1"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:fontFamily="serif"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/para2"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:fontFamily="serif"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/para3"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                android:fontFamily="serif"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
