<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context="com.thestartup.startuplegalconnect.AboutUs">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Intro -->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/intro_card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            card_view:cardCornerRadius="4dp"
            android:elevation="10dp">

            <TextView
                android:id="@+id/intro_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/about_us_intro"
                android:fontFamily="serif"
                android:textSize="20sp"/>
        </android.support.v7.widget.CardView>

        <!-- What services do we provide? -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- first item -->
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                android:padding="10dp"
                android:elevation="10dp">
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <ImageView android:src="@mipmap/ic_question_answer_black_24dp"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="0.25"
                        android:layout_gravity="center"/>
                    <TextView
                        android:id="@+id/intro_first_item_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:layout_gravity="center"
                        android:text="@string/intro_doubts"
                        android:fontFamily="serif"
                        android:textSize="16sp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- second item -->
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                android:layout_marginTop="10dp"
                android:elevation="10dp">
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <ImageView android:src="@mipmap/ic_visibility_off_black_24dp"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="0.25"
                        android:layout_gravity="center"/>
                    <TextView
                        android:id="@+id/intro_second_item_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:layout_gravity="center"
                        android:text="@string/intro_intellectual_protection"
                        android:fontFamily="serif"
                        android:textSize="16sp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!-- third item -->
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                android:layout_marginTop="10dp"
                android:elevation="10dp">
                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <ImageView android:src="@mipmap/ic_priority_high_black_24dp"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="0.25"
                        android:layout_gravity="center"/>
                    <TextView
                        android:id="@+id/intro_third_item_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:layout_gravity="center"
                        android:text="@string/intro_common_mistakes"
                        android:fontFamily="serif"
                        android:textSize="16sp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
